--- a/package.json
+++ b/package.json
@@ -61,10 +61,13 @@
         "prettier": "3.2.5"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "config": "^3.3.11",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "express": "^4.19.2",
+        "express-jwt": "^8.4.1",
+        "jsonwebtoken": "^9.0.2",
         "mariadb": "^3.3.0"
     }
 }
